Mon Jan 10 10:10:22 2000  Lars Wirzenius  <liw@wapit.com>

	* Removed automake. Automake makes huge, complicated Makefiles
	that I am rather reluctant to decipher, and I would have had to
	do that to incorporate WMLScript compiler source. So I removed
	the Makefile.am's and made a Makefile.in by hand.

Mon Jan 10 07:36:36 2000  Lars Wirzenius  <liw@wapit.com>

	* gw/wsp.c: Fixed function wsp_http_thread so that is handles
	WBMP images correctly (i.e., sends them to the phone).

2000-01-07    <rpr@rpr.wapit.com>

	* gw/wsp*.c: initial code to handle capabilities. Not finished.

	* gw/wapbox.c: removed double logging (use log-file in
	configuration)

	* gw/bearerbox.c: fixed WAP routing (no more crashes because of
	WAP traffic while connected to SMSC)

Fri Jan  7 18:06:38 2000  Lars Wirzenius  <liw@wapit.com>

	* gw/boxc.c, gwlib/http.c, gw/wapbox.c, gw/wtp.c: Made sure
	variables are initialized (compiled with gcc -Wall -O2, which
	hasn't been done for a while), or removed unused variables.
	
	* gw/wsp_events-decl.h, gw/wsp_state-decl.h: Added response_type
	member to SMethodResultRequest so that the Content-Type header
	can be communicated to the phone.
	
	* gw/wsp.c: Set response_type according to what the HTTP server
	returns as Content-Type. Also, don't blindly assume everything
	is WML.

Fri Jan  7 14:47:09 2000  Lars Wirzenius  <liw@wapit.com>

	* Making release 0.2.

Fri Jan  7 12:01:09 2000  Lars Wirzenius  <liw@wapit.com>

	* AUTHORS, NEWS, README, Release-0.2, VERSION, gw/bearerbox.conf:
	Preparing for release.
	
	* Makefile.am, Makefile.in: Removed stuff from EXTRA_DIST.
	
	* doc/fakewap-packets.txt: Wrote. This explains the packets that
	the upcoming fakewap program will use.

2000-01-05    <rpr@rpr.wapit.com>

	* gw/bearerbox.c: fixed memmove calls (thanks to Yuri for pointing
	them out)

2000-01-04    <rpr@rpr.wapit.com>

	* gw/wapbox.c: removed automatic logfile opening and instead added